# Nhat-Learn-In-Public

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  USAGE_GUIDE.md  main.py  pyproject.toml
.agents/skills/checking-urls/: SKILL.md
.agents/skills/checking-urls/scripts/: check-urls.sh
.agents/skills/learning-content-summarizer/: SKILL.md
.agents/skills/screenshot-reference/: SKILL.md
.claude/skills/pdf-reader/: EXAMPLES.md  QUICK-REF.md  REFERENCE.md
.claude/skills/pdf-reader/scripts/: pdf_reader.py
.github/: copilot-instructions.md
.github/agents/: README.md  agent.md  content-format.skill.md  datetime.skill.md  readme-updater.skill.md  topic-navigator.skill.md  weekly-content.skill.md
.github/skills/pdf-reader/: INSTALL.md  README.md  SKILL.md
.github/skills/progress-context/: SKILL.md
logs/url-checks/: UNRESOLVED.md
scripts/: check-urls.sh  new-week.sh
weeks/: TEMPLATE.md
weeks/2026/week-01/: README.md  ai-life-admin-automation.md  book-microadventures.md  cascade-bakery.md  switching-off-from-work.md
weeks/2026/week-02/: 72seasons.md  README.md  ai-use-case-discovery-framework.md  go-game-and-legends.md  probability-models-axioms.md  roth-vs-traditional-401k.md  sheriff-vs-police.md  us-marshals.md  vscode-copilot-customization-primer.md
weeks/2026/week-03/: README.md  book-superforecasting.md  calisthenics-bodyweight-fitness.md  ten-commandments-superforecasters.md
weeks/2026/week-04/: README.md  monty-hall-problem.md  nanja-monja-card-game.md
weeks/2026/week-05/: README.md  padel-vs-pickleball.md
