[project]
name = "nhat-learn-in-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pdfplumber>=0.11.9",
    "pypdf2>=3.0.1",
    "skills-ref>=0.1.1",
]

[tool.uv.sources]
skills-ref = { git = "https://github.com/agentskills/agentskills.git", subdirectory = "skills-ref" }
